<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Motor Equipment</string>
    <string name="hint_email">Email</string>
    <string name="hint_stuff">Staff ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="btn_serviceHistory">Service History</string>
    <string name="btn_CreateRequest">Create Request</string>
    <string name="submit">Submit</string>
    <string name="details">Details</string>
    <string name="company_name">Company Name</string>
    <string name="contact_person">Contact Person (Please Select)</string>
    <string name="owner">Owner</string>
    <string name="datetime">Date Time</string>
    <string name="model">Model</string>
    <string name="chassis">Chassis</string>
    <string name="hrm">HRM</string>
    <string name="service_type">Service Type (Please Select)</string>
    <string name="remarks">Remarks</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="gps_network_not_enabled">GPS Network Not Enabled</string>
    <string name="Cancel">Cancel</string>
    <string name="dialog_text">You Cannot Create Request</string>
    <string name="attention">Attention</string>
    <string name="appname">Construction Equipment App</string>
    <string name="picktime">Pick Time</string>
    <string name="responsible">Person</string>
    <string name="company">Company</string>
    <string name="stime">STime</string>
    <string name="sid">SID</string>
</resources>