<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tID"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/request"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/tID2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/requestw"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_namec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/company_name"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/ContactPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/contact_person"
                android:layout_marginBottom="10dp"
                android:textColor="#1c1c1c"
                android:textStyle="bold" />

            <Spinner
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:id="@+id/contact_person"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_person"
                android:spinnerMode="dropdown"
                android:background="@drawable/spinner_background"
                android:textColorHint="#CFD8DC"
            />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/owner"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#1c1c1c"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btndatepicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ffc107"
                    android:padding="2dp"
                    android:text="Pick Date"
                    android:layout_marginTop="5dp"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_nameX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txttime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#1c1c1c"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btntimepicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ffc107"
                    android:padding="2dp"
                    android:text="@string/picktime"
                    android:layout_marginTop="5dp"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/model" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/chassis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/chassis" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/hrm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hrm" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/ServiceTypeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/service_type"
                android:layout_marginBottom="10dp"
                android:textColor="#1c1c1c"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/service_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/service_type"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:textColorHint="#CFD8DC"
            />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/remarks" />
            </android.support.design.widget.TextInputLayout>

            <!-- Login Button -->



        </LinearLayout>

    </LinearLayout>
</ScrollView>