<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tID"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/tID2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/requestw"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/CompanyNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Company Name"
                android:textColor="@color/bpblack"/>


            <TextView
                android:id="@+id/CompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bpblack"/>

            <TextView
                android:id="@+id/ServiceTimeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Service Time"
                android:textColor="@color/bpblack"/>


            <TextView
                android:id="@+id/ServiceTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bpblack"/>

            <TextView
                android:id="@+id/ContactTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Contact"
                android:textColor="@color/bpblack"/>

            <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/bpblack"/>

            <TextView
                android:id="@+id/AssignedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Assigned Person"
                android:textColor="@color/bpblack"/>

            <TextView
                android:id="@+id/Assigned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/bpblack"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_namec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/model"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/chassis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/chassis"/>
            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/hrm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hrm" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/serviceType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/service_type" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forwardToTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forward To (Please Select)"
                android:textColor="@color/bpblack"/>

            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:dividerHeight="10.0sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/remarks" />
            </android.support.design.widget.TextInputLayout>

            <!-- Login Button -->



        </LinearLayout>

    </LinearLayout>
</ScrollView>